[package]
name = "rust_concepts"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_concepts"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = "0.4"
async-trait = "0.1.89"
rand = "0.9.2"
pin-project = "1.1.10"
parking_lot = "0.12.5"
dashmap = "6.1.0"
crossbeam-channel = "0.5.15"
rayon = "1.11.0"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
